Setting up Azure

--- a/src/RapidCMS.Core.Tests/RapidCMS.Core.Tests.csproj
+++ b/src/RapidCMS.Core.Tests/RapidCMS.Core.Tests.csproj
@@ -5,6 +5,7 @@
 
     <IsPackable>false</IsPackable>
     <Nullable>enable</Nullable>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
