--- a/src/RapidCMS.Core/RapidCMS.Core.csproj
+++ b/src/RapidCMS.Core/RapidCMS.Core.csproj
@@ -13,6 +13,9 @@
     <RepositoryType>Github</RepositoryType>
     <PackageTags>Blazor, CMS</PackageTags>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+    <Platforms>AnyCPU;x64</Platforms>
+    <AssemblyVersion>2.1.6.5</AssemblyVersion>
+    <FileVersion>2.1.6.5</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
