--- a/src/RapidCMS.UI/RapidCMS.UI.csproj
+++ b/src/RapidCMS.UI/RapidCMS.UI.csproj
@@ -16,6 +16,9 @@
     <RepositoryType>Github</RepositoryType>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <PackageTags>Blazor, CMS</PackageTags>
+    <Platforms>AnyCPU;x64</Platforms>
+    <AssemblyVersion>2.1.7.5</AssemblyVersion>
+    <FileVersion>2.1.7.5</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
