--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,5 @@ variables:
   buildConfiguration: 'Debug'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
+- script: dotnet build src/RapidCMS.sln --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
