--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,6 @@ trigger:
 - publish
 
 pool:
-  vmImage: 'ubuntu-latest'
 
 variables:
   buildConfiguration: 'Debug'
@@ -15,3 +14,15 @@ variables:
 steps:
 - script: dotnet build src/RapidCMS.sln --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'Body-And-Brain-Pay-As-You-Go(45098bff-52b9-40b4-b650-a58322e06a0c)'
+    appType: 'webAppLinux'
+    WebAppName: 'april-byrd-web-app'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    RuntimeStack: 'DOTNETCORE|Latest'
+    StartupCommand: 'SharpNinja.UI.PersonalCMS.exe'
+    ScriptType: 'Inline Script'
+    InlineScript: ':: You can provide your deployment commands here. One command per line.'
