Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
     azureSubscription: 'Body-And-Brain-Pay-As-You-Go(45098bff-52b9-40b4-b650-a58322e06a0c)'
     appType: 'webAppLinux'
     WebAppName: 'april-byrd-web-app'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/$(buildConfiguration)/*'
     RuntimeStack: 'DOTNETCORE|Latest'
     StartupCommand: 'SharpNinja.UI.PersonalCMS.exe'
     ScriptType: 'Inline Script'
