--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,8 @@ variables:
   buildConfiguration: 'Debug'
 
 steps:
-- script: dotnet build src/RapidCMS.sln --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+- script: dotnet publish src/RapidCMS.sln -r linux-x86 --self-contained -o $(System.DefaultWorkingDirectory)/linux --configuration $(buildConfiguration)
+  displayName: 'dotnet publish $(buildConfiguration)'
 
 - task: AzureRmWebAppDeployment@4
   inputs:
@@ -19,7 +19,7 @@ steps:
     azureSubscription: 'Body-And-Brain-Pay-As-You-Go(45098bff-52b9-40b4-b650-a58322e06a0c)'
     appType: 'webAppLinux'
     WebAppName: 'april-byrd-web-app'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/$(buildConfiguration)/*'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/linux/*.exe'
     RuntimeStack: 'DOTNETCORE|Latest'
     StartupCommand: 'SharpNinja.UI.PersonalCMS.exe'
     ScriptType: 'Inline Script'
