Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,5 +15,10 @@ steps:
           dotnet publish src/RapidCMS.sln -r "ubuntu.18.04-x64" --self-contained -o $(System.DefaultWorkingDirectory)/linux --configuration $(buildConfiguration)
           cd $(System.DefaultWorkingDirectory)/linux
           zip $(System.DefaultWorkingDirectory)/linux.zip *
-          ls -al $(System.DefaultWorkingDirectory)/linux.zip
+          cp $(System.DefaultWorkingDirectory)/linux.zip $(Build.ArtifactStagingDirectory)
   displayName: 'dotnet publish $(buildConfiguration)'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
