--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,9 +13,9 @@ steps:
 
 
 - script: |
-          ~/.dotnet/dotnet publish src/RapidCMS.sln -r "ubuntu.18.04-x64" --self-contained -o $(System.DefaultWorkingDirectory)/linux --configuration $(buildConfiguration)
           rm -r ff $(System.DefaultWorkingDirectory)/linux
           mkdir $(System.DefaultWorkingDirectory)/linux
+          ~/.dotnet/dotnet publish $(System.DefaultWorkingDirectory)/src/RapidCMS.sln -r "ubuntu.18.04-x64" --self-contained -o $(System.DefaultWorkingDirectory)/linux --configuration $(buildConfiguration)
           cd $(System.DefaultWorkingDirectory)/linux
           zip linux.zip *
           cp $(System.DefaultWorkingDirectory)/linux.zip $(Build.ArtifactStagingDirectory)/linux.zip
