--- a/src/SharpNinja.UI.PersonalCms/appsettings.json
+++ b/src/SharpNinja.UI.PersonalCms/appsettings.json
@@ -3,8 +3,8 @@
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "NETORGFT1029135.onmicrosoft.com",
     "TenantId": "1d041a69-96e1-4f6e-b2b1-15acade5f35d",
-    "ClientId": "f8f7f47f-6a3f-4a14-a017-e903cb7c58c5",
-    "CallbackPath": "/signin-oidc"
+    "ClientId": "721bec04-81aa-4283-83eb-74896551390d",
+    "CallbackPath": "/.auth/login/aad/callback"
   },
   "Logging": {
     "LogLevel": {
