--- a/src/SharpNinja.UI.PersonalCms/appsettings.Development.json
+++ b/src/SharpNinja.UI.PersonalCms/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "NETORGFT1029135.onmicrosoft.com",
+    "TenantId": "1d041a69-96e1-4f6e-b2b1-15acade5f35d",
+    "ClientId": "fb17c4af-c559-462d-af50-154a2f256824",
+    "CallbackPath": "/.auth/login/aad/callback"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
