--- a/src/SharpNinja.UI.PersonalCms/SharpNinja.UI.PersonalCms.csproj
+++ b/src/SharpNinja.UI.PersonalCms/SharpNinja.UI.PersonalCms.csproj
@@ -6,14 +6,15 @@
     <WebProject_DirectoryAccessLevelKey>0</WebProject_DirectoryAccessLevelKey>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <Platforms>AnyCPU;x64</Platforms>
-    <AssemblyVersion>1.0.12.12</AssemblyVersion>
-    <FileVersion>1.0.12.12</FileVersion>
+    <AssemblyVersion>1.0.14.14</AssemblyVersion>
+    <FileVersion>1.0.14.14</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.AzureKeyVault.HostingStartup" Version="2.0.4" />
     <PackageReference Include="Microsoft.Azure.SignalR" Version="1.4.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
   </ItemGroup>
 
